[package]
name = "arena_tree"
version = "0.1.0"
authors = ["Faizal Khan <faizalkhn98641@gmail.com>"]
edition = "2024"
description = "A high-performance, feature-rich Arena Tree library for Rust."
license = "MIT"
readme = "README.md"
keywords = ["tree", "arena", "id-tree", "data-structure"]
categories = ["data-structures", "no-std"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
